...
          keyboardShouldPersistTaps="handled"
          showsVerticalScrollIndicator={false}
        >
          <ReturnToHomeHeader />
          <View className="gap-5">
            <Text className="font-bold text-5xl">Welcome{"\n"}back.</Text>
            <Text className="text-lg text-muted">Sign in to your account</Text>
          </View>
          <View className="gap-5">
            {isGoogleEnabled ? (
              <>
                <Button
                  variant="outline"
...
              </>
            ) : null}
            <Input
              control={form.control}
              name="email"
              label="Email"
              placeholder="you@example.com"
              keyboardType="email-address"
              autoCapitalize="none"
              autoComplete="email"
              textContentType="emailAddress"
              returnKeyType="next"
            />
...
